Hot reload du front

--- a/srcs/frontend/data/src/components/navbar.html
+++ b/srcs/frontend/data/src/components/navbar.html
@@ -16,7 +16,7 @@
       </a>
       <a href="#" class="nav-link">
         <span>🏆</span>
-        <span>Toutournois</span>
+        <span>Tournois</span>
       </a>
       <a href="#" class="nav-link">
         <span>💬</span>
