manque surement encore des traductions que j'ai pas trouve

--- a/srcs/frontend/data/src/css/components.css
+++ b/srcs/frontend/data/src/css/components.css
@@ -1,5 +1,5 @@
 /* ============================================
-   COMPONENTS - ft_transcendance
+   COMPONENTS - ft_transcendence
    ============================================ */
 
 /* ---- Buttons ---- */
